tests/ui/endpoint/unsafe.stderr
error: Endpoint handler methods must not be unsafe
 --> tests/ui/endpoint/unsafe.rs:9:1
  |
9 | unsafe fn read_all() {}
  | ^^^^^^

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> tests/ui/endpoint/unsafe.rs:5:12
  |
4 | #[derive(Resource)]
  |                  - help: you might be missing a type parameter: `<read_all___gotham_restful_endpoint>`
5 | #[resource(read_all)]
  |            ^^^^^^^^ not found in this scope
